--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
         <artifactId>springfox-swagger-ui</artifactId>
         <version>2.9.2</version>
 	</dependency>
-
+	<dependency>
+	    <groupId>com.univocity</groupId>
+	    <artifactId>univocity-parsers</artifactId>
+	    <version>2.9.0</version>
+	</dependency>
 	</dependencies>
 	
 
