correção nome do banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # POSTGRESQL AREA
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/desafio_keyrus
+spring.datasource.url=jdbc:postgresql://localhost:5432/log_uploader
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
