--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -61,22 +61,27 @@
 		    <artifactId>postgresql</artifactId>
 		    <version>42.3.3</version>
 		</dependency>
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-spring-web</artifactId>
+		    <version>2.0.1</version>
+		</dependency>
 		
-	<dependency>
-        <groupId>io.springfox</groupId>
-        <artifactId>springfox-swagger2</artifactId>
-        <version>3.0.0</version>
-    </dependency>
-	<dependency>
-        <groupId>io.springfox</groupId>
-        <artifactId>springfox-swagger-ui</artifactId>
-        <version>2.9.2</version>
-	</dependency>
-	<dependency>
-	    <groupId>com.univocity</groupId>
-	    <artifactId>univocity-parsers</artifactId>
-	    <version>2.9.0</version>
-	</dependency>
+		<dependency>
+	        <groupId>io.springfox</groupId>
+	        <artifactId>springfox-swagger2</artifactId>
+	        <version>3.0.0</version>
+	    </dependency>
+		<dependency>
+	        <groupId>io.springfox</groupId>
+	        <artifactId>springfox-swagger-ui</artifactId>
+	        <version>2.9.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.univocity</groupId>
+		    <artifactId>univocity-parsers</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
 	</dependencies>
 	
 
